added hero block and services cards

--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
                                 <img src="./images/LOGO.svg" alt="img logo" class="nav_logo">
                             </a> 
                         </div>
-
                         <ul class="bottom_nav_bar_menu">
                             <li><a href="#">Home</a></li>
                             <li><a href="#">Company</a></li>
@@ -45,20 +44,138 @@
                             <li><a href="#">Blog</a></li>
                             <li><a href="#">Contact</a></li>
                         </ul>
-
-                        <!-- <div class="bottom_nav_bar_button">
+                        <div class="bottom_nav_bar_button">
                             <img src="" alt="">
                             <p>Call Us</p>
-                        </div> -->
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+            <div class="hero">
+                <!-- <img src="./images/place_for_img.svg" alt="" class="hero_bg"> -->
+                <div class="container">
+                    <div class="hero_items">
+                        <div class="text_and_button">
+                            <div class="text">
+                                <p class="img_leaflets">Landscape Planting Services</p>
+                                <img src="./images/hero_img.svg" alt="" class="hero_img">
+                                <p class="hero_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, <br> luctus nec ullamcorper mattis, pulvinar dapibus leo.
+                                </p>
+                            </div>
+                            <div class="buttons">
+                                <div class="hero_button_1">
+                                    <p>Get A Quate</p>
+                                </div>
+                                <div class="hero_button_2">
+                                    <p class="hero_button_text">See how it works</p>
+                                </div>
+                            </div>
+                        </div>
+                        <ul class="tags">
+                            <li class="tag_1">
+                                <img src="./images/tag_1.svg" alt="">
+                                Happy 
+                                Customers</li>
+                            <li class="tag_2">
+                                <img src="./images/tag_2.svg" alt="">
+                                Garden Created</li>
+                            <li class="tag_3">
+                                <img src="./images/tag_3.svg" alt="">
+                                Team Members</li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="hero"></div>
     </header>
 
-    <main></main>
+    <main class="main">
+        <div class="services">
+            <div class="container">
+                <div class="services_items">
+                    <div class="services_text">
+                        <img src="./images/Services_img.svg" alt="">
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever <br> since the 1500s, when an unknown printer took of type and scrambled it to make a type specimen book.</p>
+                    </div>
+                    <ul class="cards">
+                        <li>
+                            <div class="text_and_icon">
+                                <img src="./images/plant_and_blade.svg" alt="">
+                                <div class="text">
+                                    <p>Tree Planting</p>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and type setting industry.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="text_and_icon">
+                                <img src="./images/Grass_Cutting.svg" alt="">
+                                <div class="text">
+                                    <p>Grass Cutting</p>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and type setting industry.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="text_and_icon">
+                                <img src="./images/Garden_Design.svg" alt="">
+                                <div class="text">
+                                    <p>Garden Design</p>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and type setting industry.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="text_and_icon">
+                                <img src="./images/Plant_Growing.svg" alt="">
+                                <div class="text">
+                                    <p>Plant Growing</p>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and type setting industry.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="text_and_icon">
+                                <img src="./images/Flower_Scaping.svg" alt="">
+                                <div class="text">
+                                    <p>Flower Scaping</p>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and type setting industry.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="text_and_icon">
+                                <img src="./images/Branch_cutting.svg" alt="">
+                                <div class="text">
+                                    <p>Branch cutting</p>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and type setting industry.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="text_and_icon">
+                                <img src="./images/Pests_Weeds_Control.svg" alt="">
+                                <div class="text">
+                                    <p>Pests, Weeds Control</p>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and type setting industry.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="text_and_icon">
+                                <img src="./images/Watering_&_Irrigation.svg" alt="">
+                                <div class="text">
+                                    <p>Watering & Irrigation</p>
+                                    <p>Lorem Ipsum is simply dummy text of the printing and type setting industry.</p>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </main>
     <footer></footer>
 </body>
 </html>
